# courier

./: .containerignore  .gitignore  AGENTS.md  Containerfile  Makefile  README.md  config.example.yaml  podman-compose.yaml  pyproject.toml
plans/: x-to-discord-bridge.md
scripts/: send_test_item.py
src/courier/: __init__.py  __main__.py  config.py  engine.py  state.py
src/courier/destinations/: __init__.py  base.py  discord.py
src/courier/sources/: __init__.py  base.py  nitter.py
tests/: test_config.py  test_discord.py  test_engine.py  test_nitter.py
