[project]
name = "courier"
version = "0.1.0"
description = "Many-to-many data routing — poll sources, route to destinations"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "feedparser>=6.0",
]

[project.scripts]
courier = "courier.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
